--- a/css/style.css
+++ b/css/style.css
@@ -413,7 +413,7 @@ margin-right: 30px;
 
 }
 .works-box{
-    max-width: 361px;
+    width: 361px;
     height: 321px;
     margin: 11px;
 
@@ -504,7 +504,7 @@ pointer-events: auto;
 }
 @media (max-width: 400px){
     .works-box {
-        max-width: 361px;
+        max-width: 320px;
         height: 321px;
         margin: 11px 0px;
     }
@@ -656,5 +656,69 @@ margin: auto;
     .post-content {
         padding: 0 20px;
         max-width: unset;
+    }
+}
+.logos-container{
+    background-color: #f8f8f8;
+    padding-bottom: 100px;
+
+}
+.logos{
+    display: flex;
+    padding-top: 99px;
+    justify-content: center;
+    align-items: center;
+}
+.logo{
+    width: 121px;
+    margin-right: 60px;
+}
+.logo > img{
+    width: 100%;
+}
+.logo-text{
+    margin-top: 68px;
+    font-size: 18px;
+line-height: 30px;
+color: #555555;
+font-weight: 400;
+font-family: "Roboto Slab";
+text-align: center;
+max-width: 790px;
+margin: auto;
+
+}
+.mytxtSlider{
+    margin-top: 83px;
+}
+.title{
+    padding: 40px 0;
+}
+.logo-text p:first-child{
+    font-style: italic;
+}
+.swiper-pagination-bullet {
+    width: 13px !important;
+    height: 13px !important;  
+    background-color: #c0301c !important;
+    transform: scale(1) !important;
+}
+.swiper-pagination-bullet-active-next{
+    width: 13px !important;
+    height: 13px !important;  
+    background-color: #dddddd !important;
+    opacity: 1 !important;
+
+
+}
+@media (max-width: 767px){
+    .logos{
+        flex-wrap: wrap;
+    }
+    .logo{
+        margin-bottom: 22px;
+    }
+    .mytxtSlider{
+        margin-top: 22px;
     }
 }
