--- a/css/style.css
+++ b/css/style.css
@@ -722,3 +722,181 @@ margin: auto;
         margin-top: 22px;
     }
 }
+.contacts-page{
+    margin-top: 99px;
+}
+.contacts-page > h3{
+    font-size: 20px;
+line-height: 24px;
+color: #555555;
+font-weight: 400;
+font-family: "Montserrat";
+text-align: center;
+text-transform: uppercase;
+}
+.contacts-page > p{
+    font-size: 16px;
+line-height: 24px;
+color: #555555;
+font-weight: 400;
+font-family: "Roboto Slab";
+text-align: center;
+}
+.contacts-form{
+    display: flex;
+    max-width: 1151px;
+    margin: auto;
+}
+.info{
+    display: flex;
+    align-items: baseline;
+    margin-bottom: 38px;
+
+}
+.inf-txt > h5{
+    font-size: 14px;
+line-height: 30px;
+color: #555555;
+font-weight: 600;
+font-family: "Montserrat";
+text-transform: uppercase;
+margin-bottom: 19px;
+}
+.inf-txt p{
+    font-size: 12px;
+line-height: 20px;
+color: #555555;
+font-weight: 400;
+font-family: "Roboto Slab";
+}
+.icons{
+    margin-right: 15px;
+  
+}
+.contacts-form{
+    margin-top: 69px;
+    margin-bottom: 100px;
+}
+.item-form{
+    display: flex;
+    margin-bottom: 20px;
+    align-items: center;
+}
+.item-form input{
+    width: 333px;
+    height: 44px;
+    border: 1px solid #000;
+    padding: 0 17px;
+    text-transform: uppercase;
+    margin-right: 47px;
+}
+.item-form textarea{
+    padding: 15px 17px;
+    text-transform: uppercase;
+    border: 1px solid #000;
+
+
+}
+.contacts{
+    margin-right: 164px;
+
+}
+#txt-area{
+    width: 90%;
+
+}
+.btn-form{
+    width: 180px;
+    height: 50px;
+    border-radius: 2px;
+    background-color: transparent;
+    border: 2px solid #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 16px;
+    line-height: 24px;
+    color: #000;
+    font-weight: 400;
+    font-family: "Montserrat";
+    margin: unset;
+    text-decoration: none;
+    text-transform: uppercase;
+    margin-top: 10px;
+    transition: all .2s;
+
+}
+.btn-form:hover{
+    background-color: #c0301c;
+    border: 2px solid #fff;
+    color: white;
+
+}
+.ct > span{
+color: #c0301c;
+
+}
+.ct{
+    margin-left: 39px;
+    font-size: 12px;
+line-height: 20px;
+font-weight: 400;
+font-family: "Roboto Slab";
+}
+@media (max-width: 1200px){
+    .item-form input {
+        width: 300px;
+        height: 44px;
+        border: 1px solid #000;
+        padding: 0 17px;
+        text-transform: uppercase;
+        margin-right: 0px;
+    }
+    .contacts {
+        margin-right: 60px;
+    }
+    .contacts-form{
+        padding: 0 20px;
+        justify-content: center;
+
+    }
+    #txt-area {
+        width: 100%;
+    }
+}
+@media (max-width: 900px){
+    .contacts-form {
+        padding: 0 20px;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+    .item-form {
+        display: flex;
+        margin-bottom: 20px;
+        align-items: center;
+        flex-direction: column;
+    }
+    .item-form input {
+        width: 100%;
+        height: 44px;
+        border: 1px solid #000;
+        padding: 0px 17px;
+        text-transform: uppercase;
+        margin-right: 0px;
+        margin-bottom: 10px;
+    }
+    .forms{
+        padding: 0 10px;
+
+    }
+    .ct{
+        margin-top: 10px;
+
+    }
+    .date{
+        font-size: 15px;
+
+    }
+}
