--- a/css/style.css
+++ b/css/style.css
@@ -110,10 +110,15 @@ margin-top: 51px;
     .navbar{
         display: none;
     }
+    .inner-header{
+        align-items: start;
+    }
     .mobile-nav{
         display: block;
         margin-right: 30px;
         position: relative;
+        top: -7px;
+
     }
     .burger{
         color: white;
@@ -214,6 +219,9 @@ padding-top: 100px;
 height: 2px;
 background-color: #555555;
 margin: 28px auto;
+}
+.white{
+    background-color: white;
 }
 .about-container {
     font-size: 16px;
@@ -899,4 +907,27 @@ font-family: "Roboto Slab";
         font-size: 15px;
 
     }
+}
+.footer{
+    background-color: #c0301c;
+}
+.in-soc{
+    display: flex;
+}
+.inner-footer{
+    padding: 100px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.copy{
+    font-size: 12px;
+line-height: 20px;
+color: #ffffff;
+font-weight: 400;
+font-family: "Roboto Slab";
+}
+.sc{
+    margin-right: 22px;
 }
