--- a/css/style.css
+++ b/css/style.css
@@ -107,10 +107,14 @@ margin-top: 51px;
 }
 }
 @media (max-width: 767px){
-    .modal-window{
-        overflow-y: scroll;
+  #open-modal > div{
+    height: 100vh;
+    overflow-y: scroll;
+  }
+  .modal-close{
+    top: 50px !important;
 
-    }
+  }
     .fixid-header > .inner-header{
         margin-bottom: 0;
     }
@@ -1041,4 +1045,28 @@ font-family: "Roboto Slab";
     margin-bottom: 30px;
   }
   
- 
+ .btnmd{
+    
+        width: 110px;
+        height: 39px;
+        font-size: 14px;
+        letter-spacing: 1px;
+        line-height: 24px;
+        color: white;
+        font-weight: 400;
+        font-family: "Roboto Slab";
+        text-align: center;
+        background-color: #91716c;
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 24px auto;
+        pointer-events: auto;
+        padding: 10px 10px;
+        border-radius: 5px;
+        transition: all .3s;
+ }
+ .btnmd:hover{
+     background-color: #c0301c;
+ }
